2013-07-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct some "Basic Setup" package group affiliations.

	* msys/msys-base.xml (msys-tiny): Drop erroneous affiliation.
	(msys-base): Affiliate this instead, as originally intended.

	* msys/mingw-developer-toolkit.xml: Add affiliation for...
	(mingw-developer-toolkit): ...this.

	* common/package-list.xml.lzma msys/msys-package-list.xml.lzma:
	Regenerated and published.

	* common/issue.log msys/issue.log: Updated.

2013-07-22  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add hooks to support mingw-get-setup.exe

	* msys/msys-base.xml (msys-base):
	* mingw32/mingw32-base.xml (mingw32-base):
	* mingw32/mingw32-gcc4.xml (mingw32-gcc-ada, mingw32-gcc-g++):
	(mingw32-gcc-fortran, mingw32-gcc-objc): Affiliate all with the
	internally defined "Basic Setup" package group; regenerate and
	publish all associated .lzma files.

	* common/package-list.xml.lzma msys/msys-package-list.xml.lzma:
	* mingw32/mingw32-package-list.xml.lzma: All regenerated and
	published.

	* common/issue.log mingw32/issue.log msys/issue.log: Updated.

2013-07-01  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingw32/mingw32-wsl-candidate.xml: Add wsl_rc-4.0-1-mingw32-rc-4.
	* package-list.xml.lzma mingw32-package-list.xml.lzma: Regenerated.
	* common/issue.log mingw32/issue.log: Update accordingly.

2013-06-19  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingw32/mingw32-wsl-candidate.xml: Add wsl_rc-4.0-1-mingw32-rc-3.
	* package-list.xml.lzma mingw32-package-list.xml.lzma: Regenerated.
	* common/issue.log mingw32/issue.log: Update accordingly.

2013-05-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update and publish pexports.

	* mingw32/mingw32-pexports.xml: Add references for release 0.46.
	* package-list.xml.lzma mingw32-package-list.xml.lzma: Regenerated.
	* common/issue.log mingw32/issue.log: Updated accordingly.

2013-04-21  Keith Marshall  <keithmarshall@users.sourceforge.net>
